fix: update page layout and content for improved readability and structure

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@
     font-size: 1.6rem;
     font-weight: 600;
     line-height: 1.2;
-    @apply mb-5;
+    @apply mt-5 mb-2;
     @apply text-xl sm:text-2xl md:text-3xl lg:text-4xl font-semibold;
   }
   h3 {
@@ -44,7 +44,7 @@
     font-size: 1.6rem;
     font-weight: 600;
     line-height: 1.2;
-    @apply mb-3;
+    @apply mt-5 mb-2;
     @apply text-base sm:text-lg md:text-xl lg:text-2xl font-semibold;
   }
 
